--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       is_deployment: ${{ steps.check.outputs.is_deployment }}
-      module: ${{ steps.check.outputs.module }}
+      stack: ${{ steps.check.outputs.stack }}
       environment: ${{ steps.check.outputs.environment }}
       tag: ${{ steps.check.outputs.tag }}
       issue: ${{ steps.check.outputs.issue }}
@@ -31,14 +31,14 @@ jobs:
         run: |
           if [ -f "deployment.json" ]; then
             echo "is_deployment=true" >> $GITHUB_OUTPUT
-            MODULE=$(jq -r '.module' deployment.json)
+            STACK=$(jq -r '.stack' deployment.json)
             ENV=$(jq -r '.environment' deployment.json)
             TAG=$(jq -r '.tag' deployment.json)
             ISSUE=$(jq -r '.issue' deployment.json)
             AUTO_PROMOTE=$(jq -r '.auto_promote' deployment.json)
-            SELECTED_ENVS=$(jq -r '.selected_environments' deployment.json)
+            SELECTED_ENVS=$(jq '.selected_environments' deployment.json)
 
-            echo "module=$MODULE" >> $GITHUB_OUTPUT
+            echo "stack=$STACK" >> $GITHUB_OUTPUT
             echo "environment=$ENV" >> $GITHUB_OUTPUT
             echo "tag=$TAG" >> $GITHUB_OUTPUT
             echo "issue=$ISSUE" >> $GITHUB_OUTPUT
@@ -73,7 +73,6 @@ jobs:
             echo "next_environment=" >> $GITHUB_OUTPUT
           fi
 
-
   terraform-apply:
     needs: check-deployment-pr
     if: needs.check-deployment-pr.outputs.is_deployment == 'true'
@@ -87,7 +86,7 @@ jobs:
       - name: Terraform Init and Apply
         id: apply
         run: |
-          cd modules/${{ needs.check-deployment-pr.outputs.module }}
+          cd stacks/${{ needs.check-deployment-pr.outputs.stack }}
           terraform init -backend-config=environments/${{ needs.check-deployment-pr.outputs.environment }}/backend.tfvars
           terraform apply -var-file=environments/${{ needs.check-deployment-pr.outputs.environment }}/terraform.tfvars -auto-approve
 
@@ -96,7 +95,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const module = '${{ needs.check-deployment-pr.outputs.module }}';
+            const stack = '${{ needs.check-deployment-pr.outputs.stack }}';
             const env = '${{ needs.check-deployment-pr.outputs.environment }}';
             const issueNumber = '${{ needs.check-deployment-pr.outputs.issue }}';
             const prNumber = '${{ github.event.pull_request.number }}';
@@ -134,105 +133,89 @@ jobs:
               issue_number: issueNumber,
               body: `## ${env.toUpperCase()} Deployment Completed ✅
 
-              Module \`${module}\` has been successfully deployed to the ${env.toUpperCase()} environment.
+              Stack \`${stack}\` has been successfully deployed to the ${env.toUpperCase()} environment.
 
               - PR: #${prNumber}
               - Approved by: @${approver}
               - Completed at: ${completionTime}
               `
             });
-            create-next-environment-pr:
-              needs: [check-deployment-pr, terraform-apply]
-              if: needs.check-deployment-pr.outputs.is_deployment == 'true' && needs.check-deployment-pr.outputs.auto_promote == 'true' && needs.check-deployment-pr.outputs.next_environment != ''
-              runs-on: ubuntu-latest
-              steps:
-                - uses: actions/checkout@v3
-                  with:
-                    fetch-depth: 0
 
-                - name: Create PR for next environment
-                  uses: actions/github-script@v6
-                  with:
-                    script: |
-                      const module = '${{ needs.check-deployment-pr.outputs.module }}';
-                      const nextEnv = '${{ needs.check-deployment-pr.outputs.next_environment }}';
-                      const tag = '${{ needs.check-deployment-pr.outputs.tag }}';
-                      const issueNumber = '${{ needs.check-deployment-pr.outputs.issue }}';
-                      const selectedEnvs = ${{ needs.check-deployment-pr.outputs.selected_environments }};
-                      const autoPromote = ${{ needs.check-deployment-pr.outputs.auto_promote }};
-                      const requiredApprovals = ${{ needs.check-deployment-pr.outputs.required_approvals }};
-                      const branchName = `deploy/${tag}/${nextEnv}`;
+  create-next-environment-pr:
+    needs: [check-deployment-pr, terraform-apply]
+    if: needs.check-deployment-pr.outputs.is_deployment == 'true' && needs.check-deployment-pr.outputs.auto_promote == 'true' && needs.check-deployment-pr.outputs.next_environment != ''
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-                      // Create branch
-                      await exec.exec('git', ['config', 'user.name', 'GitHub Actions']);
-                      await exec.exec('git', ['config', 'user.email', 'actions@github.com']);
-                      await exec.exec('git', ['checkout', '-b', branchName]);
+      - name: Create PR for next environment
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const stack = '${{ needs.check-deployment-pr.outputs.stack }}';
+            const nextEnv = '${{ needs.check-deployment-pr.outputs.next_environment }}';
+            const tag = '${{ needs.check-deployment-pr.outputs.tag }}';
+            const issueNumber = '${{ needs.check-deployment-pr.outputs.issue }}';
+            const selectedEnvs = ${{ needs.check-deployment-pr.outputs.selected_environments }};
+            const autoPromote = ${{ needs.check-deployment-pr.outputs.auto_promote }};
+            const requiredApprovals = '${{ needs.check-deployment-pr.outputs.required_approvals }}';
+            const branchName = `deploy/${tag}/${nextEnv}`;
 
-                      // Create deployment manifest file
-                      const fs = require('fs');
-                      const deploymentConfig = {
-                        tag: tag,
-                        module: module,
-                        environment: nextEnv,
-                        issue: issueNumber,
-                        auto_promote: autoPromote,
-                        required_approvals: requiredApprovals,
-                        selected_environments: selectedEnvs
-                      };
+            // Create branch
+            await exec.exec('git', ['config', 'user.name', 'GitHub Actions']);
+            await exec.exec('git', ['config', 'user.email', 'actions@github.com']);
+            await exec.exec('git', ['checkout', '-b', branchName]);
 
-                      fs.writeFileSync('deployment.json', JSON.stringify(deploymentConfig, null, 2));
+            // Create deployment manifest file
+            const fs = require('fs');
+            const deploymentConfig = {
+              tag: tag,
+              stack: stack,
+              environment: nextEnv,
+              issue: issueNumber,
+              auto_promote: autoPromote,
+              required_approvals: requiredApprovals,
+              selected_environments: selectedEnvs
+            };
 
-                      // Commit and push
-                      await exec.exec('git', ['add', 'deployment.json']);
-                      await exec.exec('git', ['commit', '-m', `Deployment plan for ${module} to ${nextEnv}`]);
-                      await exec.exec('git', ['push', '--set-upstream', 'origin', branchName]);
+            fs.writeFileSync('deployment.json', JSON.stringify(deploymentConfig, null, 2));
 
-                      // Create progress indicator for PR description
-                      const progressList = selectedEnvs.map(selectedEnv => {
-                        if (selectedEnv === nextEnv) {
-                          return `- [x] ${selectedEnv.toUpperCase()} (this PR)`;
-                        } else if (selectedEnvs.indexOf(selectedEnv) < selectedEnvs.indexOf(nextEnv)) {
-                          return `- [x] ${selectedEnv.toUpperCase()} (completed)`;
-                        } else {
-                          return `- [ ] ${selectedEnv.toUpperCase()} (pending)`;
-                        }
-                      }).join('\n');
+            // Commit and push
+            await exec.exec('git', ['add', 'deployment.json']);
+            await exec.exec('git', ['commit', '-m', `Deployment plan for ${stack} to ${nextEnv}`]);
+            await exec.exec('git', ['push', '--set-upstream', 'origin', branchName]);
 
-                      // Create PR
-                      const { data: pr } = await github.rest.pulls.create({
-                        owner: context.repo.owner,
-                        repo: context.repo.repo,
-                        title: `🚀 Deploy ${module} to ${nextEnv.toUpperCase()}`,
-                        body: `This PR will deploy the \`${module}\` module to the ${nextEnv.toUpperCase()} environment.
+            // Create progress indicator for PR description
+            const progressList = selectedEnvs.map(selectedEnv => {
+              if (selectedEnv === nextEnv) {
+                return `- [x] ${selectedEnv.toUpperCase()} (this PR)`;
+              } else if (selectedEnvs.indexOf(selectedEnv) < selectedEnvs.indexOf(nextEnv)) {
+                return `- [x] ${selectedEnv.toUpperCase()} (completed)`;
+              } else {
+                return `- [ ] ${selectedEnv.toUpperCase()} (pending)`;
+              }
+            }).join('\n');
 
-                        **Deployment Tag:** \`${tag}\`
-                        **Tracking Issue:** #${issueNumber}
-                        **Auto-promote:** ${autoPromote ? 'Yes' : 'No'}
-                        **Required Approvals:** ${requiredApprovals}
+            // Create PR
+            const { data: pr } = await github.rest.pulls.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: `🚀 Deploy ${stack} to ${nextEnv.toUpperCase()}`,
+              body: `This PR will deploy the \`${stack}\` stack to the ${nextEnv.toUpperCase()} environment.
 
-                        ## Deployment Progress
-                        ${progressList}
+              **Deployment Tag:** \`${tag}\`
+              **Tracking Issue:** #${issueNumber}
+              **Auto-promote:** ${autoPromote ? 'Yes' : 'No'}
+              **Required Approvals:** ${requiredApprovals}
 
-                        ## Deployment Process
-                        1. Review the Terraform plan added as a comment to this PR
-                        2. Approve and merge this PR to deploy to ${nextEnv.toUpperCase()}
-                        ${autoPromote && selectedEnvs.indexOf(nextEnv) < selectedEnvs.length - 1 ? '3. The next environment PR will be created automatically upon successful deployment' : '3. This is the final environment in the deployment sequence'}
+              ## Deployment Progress
+              ${progressList}
 
-                        This is part of a deployment tracked in issue #${issueNumber}.
-                        `,
-                        head: branchName,
-                        base: 'main'
-                      });
+              ## Deployment Process
+              1. Review the Terraform plan added as a comment to this PR
+              2. Approve and merge this PR to deploy to ${nextEnv.toUpperCase()}
+              ${autoPromote && selectedEnvs.indexOf(nextEnv) < selectedEnvs.length - 1 ? '3. The next environment PR will be created automatically upon successful deployment' : '3. This is the final environment in the deployment sequence'}
 
-                      console.log(`Created PR #${pr.number} for ${module} to ${nextEnv}`);
-
-                      // Update tracking issue with PR link
-                      await github.rest.issues.createComment({
-                        owner: context.repo.owner,
-                        repo: context.repo.repo,
-                        issue_number: issueNumber,
-                        body: `## ${nextEnv.toUpperCase()} Deployment PR Created
-
-                        PR #${pr.number} has been created to deploy module \`${module}\` to the ${nextEnv.toUpperCase()} environment.
-                        `
-                      });
+              This is part of a deployment tracked in issue
