--- a/.github/workflows/detect-changes.yaml
+++ b/.github/workflows/detect-changes.yaml
@@ -53,7 +53,7 @@ jobs:
       changed_stacks: ${{ steps.detect.outputs.changed_stacks }}
       has_changes: ${{ steps.detect.outputs.has_changes }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Create dynamic path filter
         id: create_filter
@@ -62,21 +62,26 @@ jobs:
           STACKS=($(echo '${{ needs.load-config.outputs.stacks }}' | tr ',' ' '))
 
           echo "Creating filter configuration..."
-          FILTER="{\"filters\": {"
+          FILTER='{"filters": {'
 
           for STACK in "${STACKS[@]}"; do
-            PATH=$(echo $STACK_PATHS | jq -r ".[\"$STACK\"].path")
-            FILTER="$FILTER\"$STACK\": [\"$PATH\"],"
+            # Use STACK_PATH instead of PATH as the variable name
+            STACK_PATH=$(echo "$STACK_PATHS" | jq -r ".[\"$STACK\"].path")
+            echo "Stack: $STACK, Path: $STACK_PATH"
+            FILTER="$FILTER\"$STACK\": [\"$STACK_PATH\"],"
           done
 
           # Remove trailing comma and close JSON
-          FILTER="${FILTER%,}}"
+          FILTER="${FILTER%,}}}"
 
+          # Create directory if it doesn't exist
+          mkdir -p .github
           echo "$FILTER" > .github/filter.json
+          echo "Generated filter configuration:"
           cat .github/filter.json
 
       - name: Filter for Terraform stack changes
-        uses: dorny/paths-filter@v3
+        uses: dorny/paths-filter@v2
         id: filter
         with:
           filters: .github/filter.json
